inyoka/static/style/ikhaya.css
/**
 * style.ikhaya
 * ~~~~~~~~~~~~
 *
 * The styles for ikhaya.
 *
 * :copyright: 2007 by ...
 * :license: GNU GPL.
 */
 
.navi_sidebar .navi_about_ikhaya { background-image: url('../img/icons/ikhaya_sb.png'); }
.navi_sidebar .navi_new_article  { background-image: url('../img/icons/new_article.png'); }
.navi_sidebar .navi_archive      { background-image: url('../img/icons/archive.png'); }
.navi_sidebar .navi_categories   { background-image: url('../img/icons/categories.png'); }

div.content {
  padding: 0;
  border:none;
}

div.content_sidebar_bk {
  border: solid 1px #ccc;
  padding: 15px 20px;
}

ul.articles {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.article {
  border: solid 1px #ccc;
  background-image:url(../img/ikhaya/article1px.jpg);
  background-repeat:repeat-x;
  background-position:-8px 0px;;
  margin-bottom: 1em;
}

h2, h3, h4 {
  color: #444;
}

h2, h3 {
  border-bottom: 1px solid #e0c99d;
}

h3.title {
  margin: 0.7em 0 1em 1em;
}

h3.title a {
  color: #673B1A;
  text-decoration: none;
}

h3#comments {
  margin: 1.5em 0 1em 1em;
  color: #000;
  font-size: 1.4em;
/*  border-bottom: none; XXX: I'm not sure what looks better --entequak */
}

p {
  margin-bottom: 0.5em;
}

div.intro {
  margin: 0 1.5em;
  font-style: italic;
}

.article div.text {
  margin: 0 0.5em;
}

p.meta {
  color: #444;
  background-color: #ebd5ab;
  font-size: 0.9em;
  margin: 0.5em 0 0 0 !important;
  padding: 0.4em;
  border-top: 1px solid #d4d4d4;
}

img.icon {
  float: right;
  max-width: 200px;
  max-height: 120px;
  margin:0px 0px 10px 10px;
}

table.comments {
    table-layout: fixed;
    margin: 0;
    border: 0;
}

/* deleted comment */
table.comments tr.deleted {
    text-align: center;
    background-color: #eee;
    color: #444;
    font-style: italic;
}

/* author column of comments */
table.comments td.author {
    vertical-align: top;
    background: #eeeeee;
    border-right: 1px solid #cccccc;
    width: 150px;
}

table.comments td.author p {
    margin: 2px 0 5px 0;
    font-size: 0.8em;
    text-align: left;
}

table.comments td.author p.username a {
    margin: 3px 0 10px 0;
    font-size: 1.1em;
    color: black;
    font-weight: bold;
    text-decoration: none;
}

table.comments td.author img.avatar {
    margin: 10px 0 0 0;
    border: 1px solid #ccc;
    background-color: white;
}

table.comments td.author p.username {
	position: relative;
}

table.comments td.author img.teamicon {
  position: absolute;
  top: 0px;
  right: 0px;
}

table.comments td.author div.member_title {
  line-height: 1.2em;
  font-size: 0.6em;
  margin-bottom: 10px;
}

/* text column of comments */
table.comments td.comment {
    font-size: 0.9em;
    padding: 10px;
    vertical-align: top;
}

table.comments td.comment div.text {
    overflow: auto;
}

table.comments td.comment div.commentinfo {
    font-size: 0.9em;
    background: url(../img/table-header-alternative.png); 
    margin: -10px -10px 10px -10px;
    padding: 6px 10px;
    border-bottom: 1px solid #CCC;
}

table.comments td.comment div.signature { 
    margin: 20px 0 -5px 0;
    padding: 5px 0 0 0;
    border-top: 1px solid #AAA;
    color: #666;
    font-size: .9em;
    line-height: 140%;
}

table.comments td.comment div.signature p {
    padding: 0 0 5px 0;
    margin: 0;
}

table.comments td.comment div.signature a {
    color: #666;
}


/* actions of a comment */
table.comments td.comment div.linklist {
    float: right;
}

.action {
    background-repeat: no-repeat;
    padding-left: 20px;
}
.action_restore {
    background-image: url('../img/forum/restore.png');
}
.action_delete {
    background-image: url('../img/forum/delete.png');
}
.action_hide {
    background-image: url('../img/forum/hide.png');
}
.action_edit {
    background-image: url('../img/forum/comment_edit.png');
}
.action_quote {
    background-image: url('../img/forum/quote.png');
}

a.comment_link:hover {
  background-color: #222;
  color: #fff;
}

.tooltip {
  background-color: #F9F9F9;
  border: 1px solid #222;
  padding: 0.5em;
  margin: 0 4em 0 0;
}

